# randfunc

./: .breakpoints  LICENSE  README.md  pyproject.toml  setup.py
randfunc/: RANDFUNC.py  __init__.py  asciify.py  colorize.py
randfunc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
